feat: add boilerplate files and bff yaml definition
